[package]
name = "mensa-app-backend"
version = "1.4.0"
edition = "2021"
authors = [
    "Alexander Albers <usvan@student.kit.edu>",
    "Peer Booken <uglrl@student.kit.edu>",
    "Elena Häußler <uqhnu@student.kit.edu>",
    "Alexander Kutschera <ubsbo@student.kit.edu>",
    "Jonatan Ziegler <udslu@student.kit.edu>",
]
description = "Backend application for providing and synchronizing meal plan data of the canteens of the Studierendenwerk Karlsruhe"
repository = "https://github.com/kronos-et-al/MensaApp"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4.26", features = ["serde"] }
thiserror = "2.0"
uuid = "1.4.0"
axum = { version = "0.8", features = [
    "http2",
    "macros",
    "multipart",
    "tracing",
] }
async-graphql = { version = "7.0.14", features = [
    "chrono",
    "uuid",
    "tracing",
    "unblock",
    "dataloader"
] }
async-graphql-axum = "7.0.14"
tokio = { version = "1.29.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }
time = { version = "0.3.30", features = ["formatting"] }
base64 = "0.22"
sha2 = "0.10.7"
heck = "0.5"
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
regex = "1.9.1"
futures = "0.3.28"
tokio-cron-scheduler = "0.13"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }
lettre = "0.11.1"
colored = "3"
image = "0.25"
tower-http = { version = "0.6", features = ["fs"] }
tower = { version = "0.5", features = ["limit", "buffer"] }
serde = "1.0.188"
google-jwt-auth = "0.2.1"
hyper = { version = "1.5" }
mime = "0.3.17"
hmac = "0.12.1"
multer = { version = "3.1", features = ["tokio-io"] }
minijinja = "2.0.2"
axum-extra = { version = "0.10", features = ["typed-header"] }
async-once-cell = "0.5.4"
json = "0.12.4"
serde_json = "1.0.107"

[dev-dependencies]
serial_test = "3.0.0"
rand = "0.8.0"
rusty-fork = "0.3.0"
tempfile = "3.8.0"
tracing-test = "0.2.5"

[[bin]]
name = "graphql_mock"
path = "src/layer/trigger/api/bin.rs"

[[bin]]
name = "standalone_mock"
path = "src/startup/standalone_demo_bin.rs"

[profile.dev.package.sqlx-macros]
opt-level = 3
